--- a/D8.html
+++ b/D8.html
@@ -115,7 +115,7 @@
       */
 
       const firstUlDisappear = function () {
-        let targetList = document.getElementById('secondList')
+        let targetList = document.getElementById('firstList')
         targetList.remove()
       };
 
